--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "news-explorer-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://oalbukova.github.io/news-explorer-frontend",
+  "homepage": "https://oalbukova.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
