--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "news-explorer-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://albnews.students.nomoreparties.xyz/",
+  "homepage": "https://ypnews.students.nomoreparties.xyz/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "npm run build && scp -r ./build/* oalbukova@84.201.134.188:/home/oalbukova/news-explorer-frontend" ,
+    "deploy": "npm run build && scp -r ./build/* oalbukova@130.193.37.144:/home/oalbukova/news-explorer-frontend",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
